--- a/client/package.json
+++ b/client/package.json
@@ -32,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy":"https://ikahukv9da.us-east-2.awsapprunner.com"
 }
