--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "node": "^16.6.1",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
-    "react": "^17.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "cd client && npm react-script start",
     "start-server": "node src/dynamoAccess.js",
     "dev": "nodemon src/dynamoAccess.js",
     "run-server": "nodemon src/server.js"
@@ -37,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"10.0.0.17"
 }
