--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start-server": "node src/dynamoAccess.js",
-    "dev": "nodemon src/dynamoAccess.js",
-    "run-server": "nodemon src/server.js"
+    "start-server": "node server/dynamoAccess.js",
+    "dev": "nodemon server/dynamoAccess.js",
+    "start":"node server/dynamoAccess.js && cd client && npm start"
   },
   "eslintConfig": {
     "extends": [
