--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start-server": "node server/dynamoAccess.js",
-    "dev": "nodemon server/dynamoAccess.js",
-    "start":"node server/dynamoAccess.js && cd client && npm start"
+    "dev": "nodemon server/dynamoAccess.js"
+    
   },
   "eslintConfig": {
     "extends": [
