--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "canvasjs": "^1.8.3",
+    "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -32,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://ikahukv9da.us-east-2.awsapprunner.com"
+  "proxy": "https://ikahukv9da.us-east-2.awsapprunner.com"
 }
