--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.4",
+    "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -35,5 +37,4 @@
       "last 1 safari version"
     ]
   }
-
 }
